--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/UCD-SERG/rpt/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/UCD-SERG/rpt/actions/workflows/R-CMD-check.yaml)
-[![Codecov test coverage](https://codecov.io/gh/UCD-SERG/rpt/graph/badge.svg)](https://app.codecov.io/gh/UCD-SERG/rpt)
+[![Codecov test coverage](https://codecov.io/gh/ucd-serg/rpt/graph/badge.svg)](https://app.codecov.io/gh/ucd-serg/rpt)
 [![CodeFactor](https://www.codefactor.io/repository/github/ucd-serg/rpt/badge)](https://www.codefactor.io/repository/github/ucd-serg/rpt)
 [![CRAN status](https://www.r-pkg.org/badges/version/rpt)](https://CRAN.R-project.org/package=rpt)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
