--- a/vignettes/getting-started.qmd
+++ b/vignettes/getting-started.qmd
@@ -5,7 +5,7 @@ format:
   revealjs:
     output-file: getting-started-revealjs.html
 vignette: >
-  %\VignetteIndexEntry{Quarto Vignette Example}
+  %\VignetteIndexEntry{Getting Started}
   %\VignetteEngine{quarto::html}
   %\VignetteEncoding{UTF-8}
 ---
